--- a/make/Makefile-MetOffice-Report
+++ b/make/Makefile-MetOffice-Report
@@ -3,4 +3,6 @@ $(eval $(call LaTeXWithBibTeX,src/metoffice-report,build,metoffice-report))
 build/metoffice-report/metoffice-report.pdf: \
   src/metoffice-report/ametsoc2014.bst \
   src/metoffice-report/references.bib \
-  build/resting-diagnostics/w.tex
+  src/metoffice-report/fig-gravityWaves-theta.pdf \
+  build/resting-diagnostics/w.tex \
+  build/gravityWaves-diagnostics/sampleLine.tex
